--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "browser-image-compression": "^2.0.2",
+    "html2canvas": "^1.4.1",
     "motion": "^11.13.5",
-    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.0.2",
     "use-sound": "^4.0.3"
   },
